<resources>
    <string name="app_name">LocalEyes</string>
    <string name="title_activity_maps"/>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_awards">My Awards</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_contributions">My Contributions</string>
    <string name="menu_map">Map</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_sign_in">Sign In</string>

    <string name="position_format">#%1$s</string>

    <string name="category_question">"What is the photograph of?"</string>
    <string name="description_question">Add a Description</string>
    <string name="base_score">10 Points</string>
    <string name="extra_score">30 Points</string>
    <string name="button">Submit</string>


</resources>
